<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <!-- primera interfaz -->
    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.ideas_moviles.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
    </fragment>
    <!-- Segunda interfaz -->
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.ideas_moviles.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />
    </fragment>

    <!-- Tercera interfaz -->
    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.ideas_moviles.ThirdFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_third">

        <action
            android:id="@+id/action_ThirdFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_ThirdFragment_to_FourthFragment"
            app:destination="@id/FourthFragment" />

        <action
            android:id="@+id/action_ThirdFragment_to_FifthFragment"
            app:destination="@id/FifthFragment" />

    </fragment>

    <!-- Cuarta interfaz -->
    <fragment
        android:id="@+id/FourthFragment"
        android:name="com.example.ideas_moviles.FourthFragment"
        android:label="@string/Fourth_fragment_label"
        tools:layout="@layout/fragment_fourth">

        <action
            android:id="@+id/action_FourthFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment"/>

    </fragment>

    <!-- Quinta interfaz -->

    <fragment
        android:id="@+id/FifthFragment"
        android:name="com.example.ideas_moviles.FifthFragment"
        android:label="@string/Fifth_fragment_label"
        tools:layout="@layout/fragment_fifth">

        <action
            android:id="@+id/action_FifthFragment_to_ThirdFragment"
            app:destination="@id/ThirdFragment" />

    </fragment>


</navigation>