<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".FifthFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:text="@string/fourth_fragment"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="@color/brown_700"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parrafo_fourth"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:padding="5dp"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:src="@drawable/valle_cocora"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parrafo_fourth2"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:padding="5dp"
        />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_margin="20dp"
        >

        <Button
            android:id="@+id/button_fifth"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:layout_gravity="left"
            android:layout_margin="10dp"
            />

    </LinearLayout>

    </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>